link to evertz tab, fixed progress bar on mobile

--- a/css/graph.css
+++ b/css/graph.css
@@ -2,13 +2,11 @@
 .skills {
 	float: left;
 	clear: right;
-	width: 500px;
-	margin: 5px 0px 30px 30px;
+	width: 100%;
+	margin: 5px 0px 30px 0px;
 }
 
 .progress-row {
-	padding-left: 50px;
-	padding-right: 50px;
 	height: 20px;
 }
 
@@ -17,12 +15,17 @@
 	text-align: left;
 	font-weight: 600;
 	line-height: 20px;
+	padding: 0px;
 }
 
 .progress-bottom {
 	float: left;
 	clear: right;
-	width: 100%;
+	width: 100%;	
+}
+
+.col-bar {
+	padding-right: 0px;
 }
 
 .progress {
