--- a/css/starwars.css
+++ b/css/starwars.css
@@ -2,7 +2,9 @@
     font-family: "My Custom Font";
     src: url(fonts/starwars/Starjedi.ttf) format("truetype");
 }*/
-
+a {
+    color: #FEBE3E;
+}
 p.center {
     text-align: center;
 }
